GPv3 Build modifier cyclical strokes weird behaviour with first few points #119714

Closed
opened 2024-03-20 19:22:19 +01:00 by Aleš Jelovčan · 3 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.32

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-20 14:19, hash: 6d3ac72a290d
Worked: /

Short description of error
Cyclical strokes produce some weird results with only a few points drawn
image

Exact steps for others to reproduce the error
Add cyclical stroke (in GPv2 use circle tool and then convert)
Add build modifier and check frames 1-3 with initial values

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.32 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-20 14:19, hash: `6d3ac72a290d` Worked: / **Short description of error** Cyclical strokes produce some weird results with only a few points drawn ![image](/attachments/904f4dc2-46ef-4a4b-bdb1-965537394d2f) **Exact steps for others to reproduce the error** Add cyclical stroke (in GPv2 use circle tool and then convert) Add build modifier and check frames 1-3 with initial values
Aleš Jelovčan added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-03-20 19:22:20 +01:00
YimingWu was assigned by Aleš Jelovčan 2024-03-20 19:22:20 +01:00
Member

Thanks for the report. Can confirm.

Thanks for the report. Can confirm.
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-21 06:42:22 +01:00
Member

It seems to be a drawing issue. I tried to print out positions and other attributes and it was correct.

But if I manually construct a 1/2 point cyclic stroke, it will not show this artefact. So something must be going on here.

It seems to be a drawing issue. I tried to print out positions and other attributes and it was correct. But if I manually construct a 1/2 point cyclic stroke, it will not show this artefact. So something must be going on here.
Member

Looks like cyclic stroke drawing is only handled with if (is_cyclic && points.size() >= 3) { (in source/blender/draw/intern/draw_cache_impl_grease_pencil.cc line 626), this would indeed cause such artefact. Let me try make a PR to fix it. Apparently the check for points.size() >= 3 is not needed here.

Looks like cyclic stroke drawing is only handled with `if (is_cyclic && points.size() >= 3) {` (in `source/blender/draw/intern/draw_cache_impl_grease_pencil.cc` line 626), this would indeed cause such artefact. Let me try make a PR to fix it. Apparently the check for ` points.size() >= 3` is not needed here.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-21 09:04:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119714
No description provided.